--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
     <!--Link to Call in Css File-->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <!--Favicon-->
     <link rel="icon" type="image/x-icon" href="Images/favicon.png" />
     <!--Site Name-->
@@ -57,7 +57,7 @@
     <section class="hero-container">
       <!--Image-->
       <div class="hero-container_img">
-        <img src="images/selfie.png">
+        <img src="selfie.png">
       </div>
 
       <!--Text Info-->
@@ -75,7 +75,7 @@
     <div class="card">
       <!--Card Link-->
       <a href="">
-        <img src="images/approach 1.png" alt="">
+        <img src="approach 1.png" alt="">
         <div class="card-copy" style="background-color: #a7c8ff;">
         <h3> User Interface Design</h3>
         <p class="margin-top_zero">Figma, Adobe Illustrator, Adobe Photoshop, & Canva</p>
@@ -86,7 +86,7 @@
     <div class="card">
       <!--Card Link-->
       <a href="">
-        <img src="images/approach 2.png" alt="">
+        <img src="approach 2.png" alt="">
         <div class="card-copy">
         <h3 class="margin-bottom_five">Web Development</h3>
         <p class="margin-top_zero">Visual Studio Code, GitHub, Apple & Windows operating systems.</p>
@@ -97,7 +97,7 @@
      <div class="card">
       <!--Card Link-->
       <a href="">
-        <img src="images/approach 3.png" alt="">
+        <img src="approach 3.png" alt="">
         <div class="card-copy">
         <h3 class="margin-bottom_five">User Research</h3>
         <p class="margin-top_zero">Polling, user tests, affinity diagrams, empathy maps, card sorting.</p>
@@ -118,7 +118,7 @@
     <div class="card">
       <!--Card Link-->
       <a href="">
-        <img src="gif animations/cva.gif" alt="">
+        <img src="cva.gif" alt="">
         <div class="card-copy">
         <h3 class="margin-bottom_five">Website redesign</h3>
         <p class="margin-top_zero">A non-profit organization.</p>
@@ -130,7 +130,7 @@
     <div class="card">
       <!--Card Link-->
       <a href="">
-        <img src="gif animations/coparks.gif" alt="">
+        <img src="coparks.gif" alt="">
         <div class="card-copy">
         <h3 class="margin-bottom_five">Website redesign</h3>
         <p class="margin-top_zero">A goverment agency.</p>
@@ -158,7 +158,7 @@
       <!--Copyright-->
         <p class="copyright">&copy; 2034 "Christopher Dunwoody". All Rights Reserved.</p>
     </footer>
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
   </body>
   
 </html>
