--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!--Nav Item 3-->
         <div class="nav-link">
-          <a href="">PORTFOLIO</a>
+          <a href="https://chrisdunwoody.github.io/UX_UI_HW_20/">PORTFOLIO</a>
         </div>
 
         <!--Nav Item 4-->
